--- a/kurs3_sabak8-master/pubspec.yaml
+++ b/kurs3_sabak8-master/pubspec.yaml
@@ -1,4 +1,4 @@
-name: kurs3_sabak8
+name: getx_weather_app
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
