--- a/kurs3_sabak8-master/ios/Runner/Info.plist
+++ b/kurs3_sabak8-master/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>kurs3_sabak8</string>
+	<string>getx_weather_app</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
